--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&display=swap');
+
 :root {
     --red: hsl(0, 100%, 68%);
     --very-dark-blue: hsl(230, 29%, 20%);
@@ -13,6 +14,8 @@
     font-size: 18px;
 }
 body {
+    margin: 0;
+    padding: 0;
     font-family: 'Barlow', sans-serif;
 }
 
@@ -27,11 +30,14 @@ main, nav {
 }
 nav {
     width: 80%;
-    margin: 30px auto 0;
+    margin: 50px auto 0;
     align-items: center;
 }
 main {
-    margin: 80px auto 50px;
+    margin: 80px auto 80px;
+}
+.toggle-icon {
+    display: none;
 }
 .hero-text, .hero {
     flex: 1;
@@ -43,7 +49,6 @@ li {
 li a {
     margin-left: 40px;
     font-weight: 700;
-    font-size: 1em;
     padding: 10px;
     color: var(--very-dark-blue);
     text-transform: uppercase;
@@ -53,6 +58,19 @@ li a {
     margin-left: 80px;
     list-style-type: unset;
     color: var(--grayish-blue);
+    position: relative;
+}
+.unique a::before {
+    content: "";
+    position: absolute;
+    left: -40px;
+    top: 50%;
+    transform: translate(0, -50%);
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: var(--grayish-blue);
+    z-index: 1;
 }
 li:hover {
     text-decoration: underline;
@@ -63,12 +81,12 @@ li:hover {
 }
 .hero img {
     position: relative;
+    display: block;
     left: -35px;
 }
 .hero-text {
     justify-self: center;
     margin: 50px 0 0 10%;
-    width: 50%;
 }
 h5 {
     text-transform: uppercase;
@@ -87,8 +105,9 @@ h5 span {
 h1 {
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 3em;
-    margin: 20px 0 30px;
+    font-size: 4em;
+    margin: 10px 0 20px;
+    width: 90%;
 }
 
 h3 {
@@ -96,17 +115,21 @@ h3 {
     font-size: 1.2em;
     font-weight: 400;
     margin-bottom: 50px;
+    width: 70%;
 }
 
 button {
     color: var(--light-grayish-blue);
     background-color: var(--red);
-    padding: 15px 20px;
+    padding: 20px;
     text-transform: uppercase;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-weight: 700;
+}
+button:hover {
+    opacity: 0.8;
 }
 .schedule h5 {
     display: inline-block;
@@ -125,10 +148,157 @@ body::before {
 }
 
 @media screen and (max-width: 1270px) {
-    html {
-        font-size: 16px;
+    nav {
+        margin-top: 30px;
+    }
+    li a {
+        margin-left: 30px;
+        padding: 0;
+    }
+    main {
+        margin: 60px auto;
+    }
+    .hero-text {
+        margin-top: 30px;
+    }
+    .hero img {
+        width: auto;
+    }
+    h1 {
+        font-size: 3em;
+    }
+    h3 {
+        margin-bottom: 40px;
+    }
+    .schedule h5 {
+        margin-left: 10px;
+    }
+}
+@media screen and (max-width: 980px) {
+    nav {
+        width: 90%;
+        margin: 25px auto;
     }
     main {
         margin: 50px auto;
+    }
+    .hero-text {
+        margin: 20px 0 0 5%;
+
+    }
+    h3 {
+        margin-bottom: 30px;
+    }
+    h1 {
+        width: 95%;
+    }
+    button {
+        padding: 10px;
+    }
+    h5 {
+        letter-spacing: 1px;
+    }
+}
+@media screen and (max-width: 800px){
+    main {
+        flex-direction: column;
+        justify-content: center;
+    }
+    .hero, .hero-text {
+        flex: unset;
+        margin: 0 auto 20px;
+    }
+    .hero-text {
+        order: 1;
+        max-width: 80%;
+        margin: 0 auto;
+    }
+    .hero img {
+        max-width: 100%;
+        width: auto;
+        /* height: 40vh; */
+        left: 0;
+    }
+    .hero-text {
+        order: 2;
+    }
+}
+@media screen and (max-width: 570px) {
+    .toggle-icon {
+        display: inline-block;
+    }
+    .close-icon {
+        display: none;
+    }
+    nav {
+        margin: 20px auto 10px;
+    }
+    main {
+        margin: 0 auto;
+    }
+    .hero-text {
+        max-width: 90%;
+    }
+    .hero {
+        padding: 25px 0;
+        margin: 20px 0;
+    }
+    .hero img{
+        transform: scale(1.2);
+        left: 50px;
+    }
+    body::before {
+        height: 60%;
+        width: 60%;
+    }
+    h1 {
+        font-size: 2em;
+    }
+    h3 {
+        font-size: 1.2em;
+        width: 100%;
+    }
+    h5, button {
+        font-size: 0.7em;
+    }
+    ul {
+        position: absolute;
+        top: 80px;
+        left: 5%;
+        width: 90%;
+        margin: 0 auto;
+        text-align: center;
+        background-color: #fff;
+        margin: 0;
+        padding: 0;
+        box-shadow: 3px 3px 3px 2px rgba(0, 0, 0, 0.6);
+        opacity: 0;
+        height: 0;
+        pointer-events: none;
+        transition: all 0.4s;
+    }
+    li {
+        display: block;
+        padding: 15px 0;
+    }
+    li a, .unique a {
+        margin: 0;
+        padding: 0;
+        text-decoration: none;
+        display: block;
+        width: 100%;
+    }
+    .unique a::before {
+        width: 90%;
+        height: 1px;
+        top: -15px;
+        left: 5%;
+        transform: translate(0,0);
+    }
+    .show-nav {
+        height: 205px;
+        opacity: 1;
+        z-index: 2;
+        pointer-events: all;
     }
 }
