added close icon to navbar

--- a/main.css
+++ b/main.css
@@ -301,4 +301,10 @@ body::before {
         z-index: 2;
         pointer-events: all;
     }
+    .show {
+        display: inline-block;
+    }
+    .hide {
+        display: none;
+    }
 }
