minor changes to hero text

--- a/main.css
+++ b/main.css
@@ -7,8 +7,7 @@
     --grayish-blue: hsl(231, 7%, 65%);
     --light-grayish-blue: hsl(207, 33%, 95%);
 }
-/* *, *::before, *::after  */
-*{
+*, *::before, *::after {
     margin: 0;
     padding: 0;
     -moz-box-sizing: border-box;
@@ -28,7 +27,7 @@ main, nav {
     justify-content: space-between;
 }
 nav {
-    width: 80%;
+    width: 78%;
     margin: 60px auto 0;
     align-items: center;
 }
@@ -44,8 +43,9 @@ li a {
     font-weight: 700;
     color: var(--very-dark-blue);
     text-transform: uppercase;
+    letter-spacing: 3px;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 15px;
 }
 .unique a {
     margin-left: 80px;
@@ -70,7 +70,7 @@ li:hover {
     cursor: pointer;
 }
 main {
-    margin: 120px 0 0 10%;
+    margin: 120px 0 0 11%;
 }
 .hero {
     width: 53.125%;
@@ -78,23 +78,28 @@ main {
 }
 .hero img {
     display: block;
-    height: 455px;
+    height: 464px;
     width: auto;
 }
 .hero-text {
     justify-self: center;
     margin-top: 30px;
-    width: 35%;
+    width: 40%;
 }
-h3 {
+h2, h3 {
     text-transform: uppercase;
     color: var(--grayish-blue);
-    font-size: 14px;
     letter-spacing: 4px;
     font-weight: 400;
+}
+h2 {
+    font-size: 18px;
+}
+h3 {
+    font-size: 16px;
     white-space: nowrap;
 }
-h3 span {
+h2 span {
     background-color: var(--very-dark-blue);
     display: inline-block;
     padding: 7px 10px;
@@ -106,23 +111,25 @@ h3 span {
 h1 {
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 45px;
+    font-size: 65px;
     margin: 29px 0 45px 0;
+    color: var(--very-dark-blue);
 }
 
 p {
     color: var(--dark-grayish-blue);
-    font-size: 15px;
+    font-size: 20px;
     font-family: 'Barlow', sans-serif;
     font-weight: 700;
     margin-bottom: 50px;
     width: 70%;
+    line-height: 150%;
 }
 
 button {
     color: var(--light-grayish-blue);
     background-color: var(--red);
-    font-size: 14px;
+    font-size: 18px;
     padding: 18px 34px;
     text-transform: uppercase;
     border: none;
@@ -161,11 +168,8 @@ body::before {
     main {
         margin-top: 100px;
     }
-    .hero img{
-        height: 400px;
-    }
     .hero-text {
-        width: 44%;
+        width: 46%;
     }
     h3 {
         letter-spacing: 3px;
@@ -195,9 +199,6 @@ body::before {
     .hero img{
         height: 400px;
     }
-    h3 {
-        white-space: nowrap;
-    }
 }
 
 @media screen and (max-width: 760px) {
@@ -215,11 +216,10 @@ body::before {
         margin-left: 0;
     }
     .hero img {
-        height: 300px;
         margin: 0 auto;
     }
     .hero-text {
-        margin-left: 8%;
+        margin:90px 0 0 8%;
         order: 2;
         width: unset;
         max-width: 100%;
@@ -228,10 +228,7 @@ body::before {
         font-size: 45px;
         margin: 24px 0 28px 0;
     }
-    h3, p {
-        font-size: 14px;
-    }
-    h3 {
+    h2 {
         letter-spacing: 3px;
     }
     p {
@@ -242,7 +239,7 @@ body::before {
     }
 
 }
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 650px) {
     main {
         margin-top: 60px;
     }
@@ -301,20 +298,27 @@ body::before {
         display: none;
     }
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
     .hero img {
         height:  240px;
     }
     h1 {
-        font-size: 28px;
+        font-size: 40px;
     }
-    h3 {
-        font-size: 11px;
+    h2 {
+        font-size: 16px;
     }
     p {
-        font-size: 13px;
+        font-size: 18px;
+    }
+    h3 {
+        font-size: 14px;
+        letter-spacing: 1px;
+        white-space: unset;
     }
     button {
-        font-size: 10px;
+        font-size: 14px;
+        padding: 15px 25px;
+        margin-right: 20px;
     }
 }
